--- a/p1/src/main/webapp/css/custom.css
+++ b/p1/src/main/webapp/css/custom.css
@@ -8,13 +8,19 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 100px;
 }
+
+.navbar-default {
+    background-color: #f8f8f8;
+    border-color: silver;
+}
+
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here
   height: 60px; */
-  background-color: #f5f5f5;
+  background-color: #e7e7e7;
   padding: 15px 0;
   text-align: center;
 }
@@ -86,28 +92,38 @@ div.btn-group label {
   }
 }
 
-/* Sidebar navigation */
+/* Sidebar navigation TODO */
 .nav-sidebar {
-  margin-right: -21px; /* 20px padding + 1px border */
-  margin-bottom: 20px;
-  margin-left: -20px;
-}
-.nav-sidebar > li > a {
-  padding-right: 20px;
-  padding-left: 20px;
-}
-.nav-sidebar > .active > a,
-.nav-sidebar > .active > a:hover,
-.nav-sidebar > .active > a:focus {
-  color: #fff;
-  background-color: #428bca;
+	margin-right: -20px; /* 20px padding + 1px border */
+	margin-bottom: 20px;
+	margin-left: -15px;
 }
 
+.nav-sidebar .panel-heading {
+    font-size: 16px;
+    padding: 4px 4px;
+    background-color: #e7e7e7;
+}
+
+.nav-sidebar .panel-heading a {
+	text-decoration: underline;
+}
+.nav-sidebar .panel-collapse a {
+    padding-left: 36px;
+}
+.nav-sidebar a.list-group-item:hover,
+.nav-sidebar a.list-group-item:focus {
+	color: #333;
+}
+.nav-sidebar .list-group-item.active,
+.nav-sidebar .list-group-item.active:hover,
+.nav-sidebar .list-group-item.active:focus {
+    color: #fff;
+}
 
 /*
  * Main content
  */
-
 .main {
   padding: 20px;
 }
@@ -124,3 +140,4 @@ div.btn-group label {
 .alert {
     margin-bottom: 10px;
 }
+
